@@ -2113,3 +2113,5 @@ Fixed issue with multiple records on picture output in rcontrib (and rfluxmtx).
 Credit to Sarith Subramaniam for pointing out the problem.
 
 Made mkillum more tolerant of non-planar polygons in its sampling routines.
+
+Added "-recover" option to genBSDF to pick up where it left off.
